Fixing and adding relation into the Post and comments